refactored BaseStoreTest; improved readme; removed obsolete workflow